--- a/package.json
+++ b/package.json
@@ -1,56 +1,50 @@
 {
-  "name": "wabot-aq",
-  "version": "1.6.0",
-  "description": "Customizable WhatsApp Bot",
-  "depecrated": false,
+  "name": "xandao-bot-parsa",
+  "version": "0.0.2",
+  "description": "No comment",
   "main": "index.js",
   "directories": {
-    "lib": "lib",
-    "src": "src",
-    "plugins": "plugins"
+    "lib": "lib"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
-    "termux-whatsapp-bot",
-    "whatsapp-bot",
+    "termux",
     "whatsapp",
-    "js-whatsapp"
+    "bot",
+    "whatsapp",
+    "bot"
   ],
-  "homepage": "https://github.com/Nurutomo/wabot-aq",
-  "author": {
-    "name": "Nurutomo"
+  "author": "MhankBarBar",
+  "license": "ISC",
+  "dependencies": {
+    "@adiwajshing/baileys": "github:adiwajshing/baileys",
+    "@kagchi/kag-api": "^1.5.5",
+    "async": "^2.4.1",
+    "axios": "^0.21.0",
+    "cfonts": "^2.9.0",
+    "escape-string-regexp": "^1.0.5",
+    "fake-useragent": "^1.0.1",
+    "fluent-ffmpeg": "^2.1.2",
+    "imgbb-uploader": "^1.1.0",
+    "lolis.life": "^4.0.0",
+    "moment-timezone": "^0.5.32",
+    "multistream": "^2.1.0",
+    "node-fetch": "^2.6.1",
+    "remove.bg": "^1.3.0",
+    "request": "^2.81.0",
+    "spinnies": "^0.5.1",
+    "tiktok-scraper": "^1.4.7"
   },
+  "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
+    "url": "git+https://github.com/mhankbarbar/termux-wabot.git"
   },
   "bugs": {
-    "url": "https://github.com/Nurutomo/wabot-aq/issues"
+    "url": "https://github.com/mhankbarbar/termux-wabot/issues"
   },
-  "license": "GPL-3.0-or-later",
-  "dependencies": {
-    "@adiwajshing/baileys": "^3.5.0",
-    "awesome-phonenumber": "^2.47.0",
-    "brainly-scraper-v2": "^1.1.2",
-    "cfonts": "^2.9.1",
-    "chalk": "^4.1.0",
-    "cheerio": "^1.0.0-rc.5",
-    "express": "^4.17.1",
-    "file-type": "^16.3.0",
-    "form-data": "^3.0.1",
-    "google-it": "^1.6.2",
-    "jsdom": "^16.5.1",
-    "node-fetch": "^2.6.1",
-    "node-gtts": "^2.0.2",
-    "qrcode": "^1.4.4",
-    "syntax-error": "^1.4.0",
-    "terminal-image": "^1.2.1",
-    "translate-google-api": "^1.0.4",
-    "url-regex": "^5.0.0",
-    "yargs": "^16.2.0",
-    "yt-search": "^2.7.4"
-  }
+  "homepage": "https://github.com/mhankbarbar/termux-wabot#readme"
 }
